--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -2,6 +2,7 @@
 {% block title%}{{ book.title }}{% endblock title %}
 {% block content %}
   <div class="book-detail">
+    <img class="bookcover" src="{{ book.cover.url}}">
     <h2><a href="">{{ book.title }}</a></h2>
     <p>Author:{{ book.author }}</p>
     <p>Price:{{ book.price }}</p>
