--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -2,7 +2,9 @@
 {% block title%}{{ book.title }}{% endblock title %}
 {% block content %}
   <div class="book-detail">
-    <img class="bookcover" src="{{ book.cover.url}}">
+    {% if book.cover %}
+      <img class="bookcover" src="{{ book.cover.url}}" alt="{{ book.title }}">
+    {% endif %}
     <h2><a href="">{{ book.title }}</a></h2>
     <p>Author:{{ book.author }}</p>
     <p>Price:{{ book.price }}</p>
